# WIZnet-PICO-AWS-C

./: .gitmodules  CMakeLists.txt  README.md  wiznet_pico_aws_c_sdk_version.cmake
examples/aws_iot_http/: CMakeLists.txt  README.md  aws_iot_http.c
examples/aws_iot_mqtt/: CMakeLists.txt  README.md  aws_iot_mqtt.c  mqtt_certificate.h
libraries/: CMakeLists.txt
port/: CMakeLists.txt
port/aws-iot-device-sdk-embedded-C/inc/: core_mqtt_config.h  dns_config.h  dns_interface.h  mqtt_transport_interface.h  ssl_transport_interface.h  timer_interface.h  util.h
port/aws-iot-device-sdk-embedded-C/src/: dns_interface.c  http_transport_interface.c  mqtt_transport_interface.c  ssl_transport_interface.c  timer_interface.c  util.c
port/ioLibrary_Driver/inc/: w5x00_spi.h  wizchip_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c  wizchip_qspi_pio.c  wizchip_spi.c  wiznet_spi_pio.c
port/mbedtls/inc/: ssl_config.h
